--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,4 +24,5 @@ android {
 dependencies {
     implementation 'com.zaaach:toprightmenu:1.1.2'
     implementation 'com.github.andyxialm:ColorDialog:1.0.0'
+    implementation files('libs\\SQLiteStudioRemote.jar')
 }
